add title code and edit ui

--- a/src/components/BlogImage.astro
+++ b/src/components/BlogImage.astro
@@ -16,7 +16,7 @@ const { src, alt, aspectRatio = 16 / 9, loading = "lazy" } = Astro.props;
   src={src}
   loading={loading}
   alt={alt}
-  class="rounded-lg sm:rounded-xl overflow-hidden ring ring-zinc-800/30"
+  class="rounded-md overflow-hidden ring ring-zinc-800/30"
   width={768}
   height={402}
 />
