--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -64,7 +64,7 @@ pubDate = pubDate.split("T")[0];
           <slot />
         </article>
       </section>
-      <footer class="flex flex-row justify-between items-center my-7 text-base text-zinc-400">
+      <footer class="flex flex-row justify-between items-center mt-10 text-base text-zinc-400">
         <a href="/blog" class="hover:underline prose-a:underline-offset-2 text-blue-400">Back to posts</a>
         <a href="#" class="hover:underline prose-a:underline-offset-2 text-blue-400">Back to top</a>
       </footer>
