--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,8 +25,8 @@ import { Picture } from "@astrojs/image/components";
       </p>
     </header>
   </section>
-  <section class="py-10 mb-10 md:py-14">
-    <h1 class="mb-6 text-3xl md:text-4xl font-semibold tracking-tight">About Me</h1>
+  <section class="py-10 mb-10 md:py-14 text-zinc-300">
+    <h1 class="mb-6 text-3xl md:text-4xl font-semibold tracking-tight text-white">About Me</h1>
     <p>I'm Lance Ross, a Frontend Web Developer from the Philippines. I enjoy building small projects using Astro and Tailwind CSS.</p><br />
     <p>I create basic webpages when I have free time after school. When not busy with doing projects and schoolworks, I play video games like Genshin Impact.</p>
   </section>
