--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -12,7 +12,7 @@ const metadata = {
 <Layout {...metadata}>
   <section>
     <h1 class="mb-6 text-3xl md:text-4xl font-semibold tracking-tight">Projects</h1>
-    <p class="mb-5 dark:text-zinc-300">
+    <p class="mb-5 text-zinc-300">
       Here is a list of my top open source projects that I own and contribute to. This list gets updated biweekly.
     </p>
     <section>
