--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,9 +3,9 @@ import NavLink from "@components/NavLink.astro";
 
 const navbar = [
   { name: "Home", href: "/" },
-  { name: "About", href: "/about" },
-  { name: "Projects", href: "/projects" },
-  { name: "Blog", href: "/blog" },
+  { name: "About", href: "/about/" },
+  { name: "Projects", href: "/projects/" },
+  { name: "Blog", href: "/blog/" },
   { name: "RSS", href: "/rss.xml" },
 ];
 ---
