New social link added

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,6 +21,11 @@ const socials = [
     name: "GitHub",
   },
   {
+    url: "https://instagram.com/lancerossdev",
+    icon: "mdi:instagram",
+    name: "Instagram",
+  },
+  {
     url: "mailto:lancerossdev@duck.com",
     icon: "dashicons:email",
     name: "Email",
