editing forked repo for my own use

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -33,18 +33,18 @@ pubDate = pubDate.split("T")[0];
     <meta property="og:title" content={frontmatter.title} />
     <meta property="og:description" content={frontmatter.description} />
     <meta property="og:image" content={ogImage} />
-    <meta property="og:site_name" content="Lance Ross" />
+    <meta property="og:site_name" content="Will Bell" />
     <meta property="og:locale" content="en_US" />
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:url" content={canonicalURL} />
-    <meta name="twitter:site" content="@lancerossdev" />
-    <meta name="twitter:creator" content="@lancerossdev" />
+    <meta name="twitter:site" content="@senorgrubby" />
+    <meta name="twitter:creator" content="@senorgrubby" />
     <meta property="twitter:title" content={frontmatter.title} />
     <meta property="twitter:description" content={frontmatter.description} />
     <meta property="twitter:image" content={ogImage} />
     <meta name="generator" content={Astro.generator} />
     <meta name="robots" content="follow, index" />
-    <meta name="author" content="Lance Ross" />
+    <meta name="author" content="Will Bell" />
   </head>
   <body class="bg-zinc-900 text-white text-lg sm:text-xl">
     <main class="m-auto p-8 max-w-4xl md:px-20">
@@ -53,7 +53,7 @@ pubDate = pubDate.split("T")[0];
         <h1 class="mb-6 md:text-5xl text-3xl font-semibold tracking-tight">{frontmatter.title}</h1>
         <nav class="flex flex-row space-x-1.5 text-base text-gray-300">
           <time datetime={frontmatter.pubDate} class="mb-3 sm:mb-0">
-            By Lance Ross on {thisDate}
+            By Will Bell on {thisDate}
           </time>
         </nav>
       </header>
