--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,8 +10,8 @@ export interface Props {
 }
 
 const defaultMeta = {
-  title: "Lance Ross",
-  description: "I'm a Next.js and Astro Enjoyer. Welcome to my digital oasis!",
+  title: "Will Bell",
+  description: "I'm a data boi",
   image: "/opengraph.png",
   imageAlt: "Favicon",
 };
@@ -38,18 +38,18 @@ const canonicalURL = new URL(Astro.url).href;
     <meta property="og:description" content={description} />
     <meta property="og:image" content={heroImage} />
     <meta property="og:image:alt" content={imageAlt} />
-    <meta property="og:site_name" content="Lance Ross" />
+    <meta property="og:site_name" content="Will Bell" />
     <meta property="og:locale" content="en_US" />
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:url" content={canonicalURL} />
-    <meta name="twitter:site" content="@lancerossdev" />
-    <meta name="twitter:creator" content="@lancerossdev" />
+    <meta name="twitter:site" content="@senorgrubbyv" />
+    <meta name="twitter:creator" content="@senorgrubby" />
     <meta property="twitter:title" content={title} />
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content={heroImage} />
     <meta name="generator" content={Astro.generator} />
     <meta name="robots" content="follow, index" />
-    <meta name="author" content="Lance Ross" />
+    <meta name="author" content="Will Bell" />
   </head>
   <body class="bg-zinc-900 text-white text-lg sm:text-xl">
     <main class="m-auto p-8 max-w-4xl md:px-20">
