--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,7 +4,7 @@ import ProjectCard from "@components/ProjectCard.astro";
 import projects from "@content/projects.json";
 
 const metadata = {
-  title: "Projects - Lance Ross",
+  title: "Projects - Will Bell",
   description: "This is my project section. This is a list of projects I own and contribute to.",
 }
 ---
@@ -13,7 +13,7 @@ const metadata = {
   <section>
     <h1 class="mb-6 text-3xl md:text-4xl font-semibold tracking-tight">Projects</h1>
     <p class="mb-5 text-zinc-300">
-      Here is a list of my top open source projects that I own and contribute to. This list gets updated biweekly.
+      Here is a list of some projects I've worked on, or I am actively working on.
     </p>
     <section>
       <ul class="mb-5 grid sm:grid-cols-2 gap-5">
