--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,6 +36,11 @@ const socials = [
     icon: "carbon:logo-keybase",
     name: "grubbby",
   },
+  {
+    icon:"carbon:document",
+    name:"resume",
+    url:"/Will_Bell_DS_Resume__Copy_-2.pdf"
+  }
 ];
 ---
 
@@ -59,7 +64,7 @@ const socials = [
         Will Bell
       </h1>
       <p class="max-w-10 text-zinc-300 sm:max-w-sm md:max-w-xl">
-        Welcome to my webpage/CV/blog! I appreciate you stopping by, check out
+        Welcome to my webpage/blog! I appreciate you stopping by, check out
         my projects and hit me on twitter/email for a quick response
       </p>
     </header>
