--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ const socials = [
   },
   {
     icon:"carbon:document",
-    name:"resumee",
+    name:"resume",
     url:"/Will_Bell_DS_Resume__Copy_-2.pdf"
   }
 ];
