--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,9 +74,9 @@ const socials = [
     class="pb-10 sm:flex sm:items-center sm:justify-between sm:flex-row-reverse"
   >
     <p class="max-w-10 text-zinc-300">
-      I'm a Data Science/Math student at Purdue interested in large scale
-      data/ML pipelines and the infra behind it. My coursework is mostly
-      theoretical Math/CS/Statistics, so I enjoy building software/data
+      I'm a Data Science and Math student at Purdue interested in large scale
+      data and/or ML pipelines and the infra behind it. My coursework is mostly
+      theoretical Math/CS/Statistics, so I enjoy building software and data
       applications in my free time to explore these concepts--mostly with
       Python. Recently, I've been learning about Topic Modeling, Rust, Go, and
       notification systems, you can check out my progress under my Projects tab.
