--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,14 +16,14 @@ const metadata = {
     <h1 class="mb-6 text-3xl md:text-4xl text-white font-semibold">About me</h1>
     <p>
       I grew up in San Diego, CA, and I now spend 75% of the year in West Lafayette,
-      IN. In my free time, I like cooking, snowboarding, guitar and hiking!
+      IN. In my free time, I like cooking, snowboarding, guitar and hiking.
     </p>
     <br />
     <p>
       I enjoy exploring new langauges and libraries! Most of my formal academic
       experience is with the PyData stack/Python, which led to building API's
       with Flask/FastAPI. I learned Java/React.js while at Amazon last summer
-      and wrote production code, and I'm learning Rust now!
+      and wrote production code, and I'm learning Rust now.
     </p>
     <br>
     <h1 class="mb-6 text-l md:text-4xl text-white font-semibold">Technologies</h1>
