lazy commit lol

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ export interface Props {
 
 const defaultMeta = {
   title: "Will Bell",
-  description: "I'm a data boi",
+  description: "will's website",
   image: "/opengraph.png",
   imageAlt: "Favicon",
 };
