--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,8 +67,8 @@ const socials = [
         Will Bell
       </h1>
       <p class="max-w-10 text-zinc-300 sm:max-w-sm md:max-w-xl">
-        Welcome to my webpage/blog! I appreciate you stopping by, check otttut
-        my projects and hit me on twitter/email for a quick resoe
+        Welcome to my webpage/blog! I appreciate you stopping by, check out
+        my projects and hit me on twitter/email for a quick reponse!!
       </p>
       {
         contact && (
