lazy commit lol

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,7 @@ const socials = [
       </h1>
       <p class="max-w-10 text-zinc-300 sm:max-w-sm md:max-w-xl">
         Welcome to my webpage/blog! I appreciate you stopping by, check out
-        my projects and hit me on twitter/email for a quick reponse!!
+        my projects and hit me on twitter/email for a quick response!!
       </p>
       {
         contact && (
