lazy commit lol

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,8 +3,8 @@ import { Button, Container, TextCardSection } from '@littlesticks/odyssey-theme-
 import Layout from '../layouts/Page.astro';
 
 const seo = {
-	title: 'Get Started using the Astro Odyssey Theme',
-	description: 'Get started on how to setup and use this Astro theme.',
+	title: 'Get Started using with Advisa',
+	description: 'Get started with Advisa',
 };
 ---
 
